Missing update when toggling GP layer visibility in the Outliner #61462

Closed
opened 2019-02-12 14:01:31 +01:00 by William Reynish · 3 comments

System Information
Operating system: macOS 10.14.3
Graphics card: AMD Radeon R9 M395X 4096 MB

Blender Version
Broken: Blender 2.80 beta Feb 12th

Short description of error
Missing update when toggling GP layer visibility in the Outliner

Exact steps for others to reproduce the error
Open the blend file below. Then toggle these visibility toggles in the Outliner:

Screenshot 2019-02-12 at 13.56.34.png

You will see it has no effect unless you save and reload the blend file, or otherwise force it to refresh.

GP_layer_visibility_outliner_bug.blend

**System Information** Operating system: macOS 10.14.3 Graphics card: AMD Radeon R9 M395X 4096 MB **Blender Version** Broken: Blender 2.80 beta Feb 12th **Short description of error** Missing update when toggling GP layer visibility in the Outliner **Exact steps for others to reproduce the error** Open the blend file below. Then toggle these visibility toggles in the Outliner: ![Screenshot 2019-02-12 at 13.56.34.png](https://archive.blender.org/developer/F6589694/Screenshot_2019-02-12_at_13.56.34.png) You will see it has no effect unless you save and reload the blend file, or otherwise force it to refresh. [GP_layer_visibility_outliner_bug.blend](https://archive.blender.org/developer/F6589696/GP_layer_visibility_outliner_bug.blend)

Added subscriber: @WilliamReynish

Added subscriber: @WilliamReynish
Antonio Vazquez was assigned by Sebastian Parborg 2019-02-12 14:37:16 +01:00

This issue was referenced by 5aacad16e0

This issue was referenced by 5aacad16e072ab1f2e76bd75219562f36fab2807

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#61462
No description provided.