Fix T61462: Missing update when toggling GP layer visibility in the Outliner